--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "data": "^0.6.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
