--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -24,6 +24,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.12.0",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
